--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,12 @@ html {
 body {
    background-image: linear-gradient(to right bottom, #161616, #2e2a2a, #2d5334, #2e2a2a,#161616);
    height: 100vh;
+   width: 100vw;
+   overflow-x: hidden;
+}
+
+.content::-webkit-scrollbar {
+    display: none;
 }
 
 .content {
@@ -133,7 +139,7 @@ p {
 
 .skills ol {
     max-width: 700px;
-    padding: 30px;
+    padding: 10px 30px 30px 30px;
     font-size: 1.15em;
     list-style: none;
 }
