--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,67 @@ p {
     text-shadow: 0 0 10px #1d1d1d99;
     line-height: 1.5em;
 }
+/* Nav bar */
+
+.nav-bar {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+}
+
+.nav-top {
+    display: flex;
+    justify-content: center;
+    width: 60px;
+    height: 60px;
+    background-color: #2d533499;
+    border-radius: 10px ;
+    box-shadow: 5px 5px 20px#1d1d1d;
+    transition: height 300ms ease-in-out;
+}
+
+.check {
+    opacity: 0;
+    place-self: flex-start;
+    width: 60px;
+    height: 60px;
+}
+
+.nav-extend {
+    height: 280px;
+}
+
+.nav-bar ul {
+    position: fixed;
+    margin-top: 60px;
+    display: none;
+    transition: display 350ms ease-in-out;
+}
+
+
+.nav-bar ul li {
+    text-align: center;
+    list-style: none;
+    font-size: 1em;
+    margin-bottom: 20px;
+}
+
+.nav-bar ul {
+    
+}
+/* 
+.nav-bottom {
+    position: relative;
+    bottom: 8px;
+    width: 50px;
+    height: 0;
+    background-color: #2d5334;
+    transition: all 300ms ease-in-out;
+    border-radius: 0 0 10px 10px;
+} */
+
+
+
 
 /* Hero Page */
 
@@ -180,7 +241,7 @@ ul li {
 
 .formcarry-container {
     display: block;
-    width: 700px;
+    width: 650px;
     margin-top: 20px;
 }
 
