--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ body {
 .content {
     overflow: scroll;
     height: 100vh;
+    scroll-behavior: smooth;
 }
 
 .page {
@@ -62,7 +63,7 @@ p {
     justify-content: center;
     width: 60px;
     height: 60px;
-    background-color: #2d533499;
+    background-color: #29312994;
     border-radius: 10px ;
     box-shadow: 5px 5px 20px#1d1d1d;
     transition: height 300ms ease-in-out;
@@ -85,7 +86,14 @@ p {
     display: none;
     transition: display 350ms ease-in-out;
 }
+.nav-top a {
+    color: #99999999;
+    text-decoration: none;
+}
 
+.nav-top a:hover {
+    color: #d8d6d6;
+}
 
 .nav-bar ul li {
     text-align: center;
@@ -94,9 +102,6 @@ p {
     margin-bottom: 20px;
 }
 
-.nav-bar ul {
-    
-}
 /* 
 .nav-bottom {
     position: relative;
@@ -196,7 +201,6 @@ a {
 
 .project a:hover {
     color: #d8d6d6;
-
 }
 
 .project p {
