--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ p {
     background-color: #67ff832c;
     border-radius: 10px ;
     box-shadow: 5px 5px 20px#1d1d1d;
-    transition: height 300ms ease-in-out;
+    transition: height 300ms ease-in;
 }
 
 
@@ -102,7 +102,7 @@ p {
     position: fixed;
     margin-top: 62px;
     display: none;
-    transition: display 350ms ease-in-out;
+    transition: display 300ms ease-in-out;
 }
 .nav-top a {
     color: #99999999;
@@ -111,7 +111,7 @@ p {
 
 .nav-top i {
     color: #99999999;
-    transition: color 350ms ease-in-out;
+    transition: color 300ms ease-in-out;
     transform: scale(0.75);
 }
 
