--- a/styles.css
+++ b/styles.css
@@ -332,11 +332,12 @@ textarea {
 
 
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 700px) {
     .nav-bar {
         position: fixed;
         top: 20px;
-        left: 320px;
+        left: auto;
+        right: 20px;
     }
    
     
