--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ html {
 }
 
 body {
-    background-image: linear-gradient(to right bottom, #313030, #4c4747, #2d5334, #2e2a2a, #161616);
+    background-image: linear-gradient(to right bottom, #686666, #575757, #517758, #575454, #686666);
     height: 100vh;
     width: 100vw;
     overflow-x: hidden;
