--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
     font-weight: 400;
     text-transform: uppercase;
     /* border: 1px solid white; */
-    color: #00000099;
+    color: #242323;
 }
 
 html {
@@ -14,7 +14,7 @@ html {
 }
 
 body {
-    background-image: linear-gradient(to right bottom, #686666, #575757, #517758, #575454, #686666);
+    /* background-image: linear-gradient(to right bottom, #686666, #575757, #517758, #575454, #686666); */
     height: 100vh;
     width: 100vw;
     overflow-x: hidden;
@@ -42,12 +42,12 @@ body {
     z-index: 1;
 }
 
-h1 {
-    text-shadow: 0 0 5px #1d1d1d;
+.hero h1 {
+    text-shadow: 2px 2px 5px #0f0f0f7e;
 }
 
 p {
-    text-shadow: 0 0 5px #1d1d1d;
+    /* text-shadow: 0 0 5px #1d1d1d; */
     line-height: 1.5em;
 }
 /* Nav bar */
@@ -63,9 +63,9 @@ p {
     justify-content: center;
     width: 60px;
     height: 60px;
-    background-color: #67ff832c;
+    background-color: #03f32f5e;
     border-radius: 10px ;
-    box-shadow: 5px 5px 20px#1d1d1d;
+    box-shadow: 2px 2px 10px#1d1d1d73;
     transition: height 300ms ease-in;
 }
 
@@ -81,11 +81,12 @@ p {
     user-select: none;
     width: 60px;
     height: 60px;   
-    transition: color 350ms ease-in-out, text-shadow 350ms ease-in-out;
+    transition: color 200ms ease-in-out,
 }
 
 .check i {
     transform: scale(0.75);
+    padding-left: 0.2em;
 }
  
 
@@ -95,8 +96,9 @@ p {
 }
 
 .checked {
-    color: #d8d6d6;
-    text-shadow:0 0 10px #d8d6d680
+    color: white;
+    text-shadow:0 0 10px #d8d6d680;
+    transition: color 200ms ease-in-out
 }
 .nav-extend {
     height: 390px;
@@ -106,30 +108,26 @@ p {
     position: fixed;
     margin-top: 62px;
     display: none;
-    transition: display 300ms ease-in-out;
+    transition: display 200ms ease-in-out;
 }
 .nav-top a {
-    color: #99999999;
+    color: #242323;
     text-decoration: none;
 }
 
 #nav-links i {
-    color: #99999999;
-    transition: color 300ms ease-in-out;
+    color: #242323;
+    transition: color 200ms ease-in-out;
     transform: scale(0.75);
-}
-
-.check i {
-    padding-left: 0.2em;
 }
 
 
 #nav-links i:hover {
-    color: #d8d6d6;
+    color: white;
 }
 
 .nav-top a:hover {
-    color: #d8d6d6;
+    color: white;
 }
 
 .nav-bar ul li {
@@ -140,18 +138,6 @@ p {
     user-select: none;
 }
 
-/* 
-.nav-bottom {
-    position: relative;
-    bottom: 8px;
-    width: 50px;
-    height: 0;
-    background-color: #2d5334;
-    transition: all 300ms ease-in-out;
-    border-radius: 0 0 10px 10px;
-} */
-
-
 
 
 /* Hero Page */
@@ -161,6 +147,8 @@ p {
     font-size: 7em;
     user-select: none;
 }
+
+
 
 .hero p {
     font-size: 2em;
@@ -188,11 +176,11 @@ p {
 
 
 .projects a {
-    color: #99999999;
+    color: #3d3b3b;
 }
 
 .projects a:hover {
-    color: #999999;
+    color: #131212;
 }
 
 .project a:hover {
@@ -210,42 +198,39 @@ p {
 .project {
     margin: 10px;
     width: 350px;
-    border: 4px solid #0e0d0d85;
+    border: 3px solid #242323da;
     border-radius: 7px;
-    box-shadow: 5px 5px 20px#1d1d1d;
+    box-shadow: 2px 2px 5px#1d1d1d;
     padding: 10px;
-    transition: border 600ms ease-in-out, border-radius 500ms ease-in-out;
+    transition: border 300ms ease-in-out, border-radius 300ms ease-in-out;
 }
 
-.project h2 {
-    text-shadow: 0 0 5px #1d1d1d;
-}
 
 .project:hover {
-    border: 4px solid #999999;
-    border-radius: 10px;
+    border: 3px solid #131212;
+    border-radius: 9px;
 }
 
 .project:hover h2 {
-    color: #111111;
+    color: #131212;
 }
 
 .project:hover p {
-    color: #111111;
+    color: #131212;
 }
 
 .project p,
 h2,
 a {
-    transition: color 500ms ease-in-out;
+    transition: color 200ms ease-in-out;
 }
 
 .project a {
-    color: #99999999;
+    color:  #3d3b3b;;
 }
 
 .project a:hover {
-    color: #d8d6d6;
+    color: #131212;
 }
 
 .project p {
@@ -263,7 +248,6 @@ a {
     padding: 10px 30px 30px 30px;
     font-size: 1.15em;
     list-style: none;
-    text-shadow: 0 0 10px #1d1d1d;
 }
 
 .skills ol>li {
@@ -298,7 +282,6 @@ ul li {
     display: block;
     font-size: 1.15em;
     padding: 12px 0 2px 0;
-    text-shadow: 0 0 10px #1d1d1d;
 }
 
 .formcarry-form input,
@@ -306,20 +289,20 @@ textarea {
     width: 100%;
     border-radius: 7px;
     border-color: transparent;
-    background-color: #99999999;
-    box-shadow: 5px 5px 20px#1d1d1d;
+    background-color: white;
+    box-shadow: 0px 0px 10px#1d1d1d6e;
     color: #11111199;
     outline: none;
     text-transform: none;
     padding: 7px;
     font-size: 1.1em;
-    transition: border-radius 500ms ease-in-out, background-color 500ms ease-in-out, color 500ms ease-in-out;
+    transition: border-radius 300ms ease-in-out, background-color 300ms ease-in-out, color 500ms ease-in-out;
 }
 
 .formcarry-form input:focus,
 .formcarry-form textarea:focus {
     border-radius: 12px;
-    background-color: #d4d1d1;
+    background-color: #f8f6f6;
     color: #111111;
 }
 
@@ -330,14 +313,14 @@ textarea {
     font-size: 1.2em;
     border-color: transparent;
     border-radius: 7px;
-    background-color: #99999999;
-    box-shadow: 5px 5px 20px#1d1d1d;
+    background-color: white;
+    box-shadow: 0px 0px 10px#1d1d1d6e;
 }
 
 .formcarry-form button:hover {
     border-radius: 12px;
-    background-color: #d4d1d1;
-    transition: border-radius 500ms ease-in-out, background-color 500ms ease-in-out;
+    background-color: #f8f6f6;
+    transition: border-radius 300ms ease-in-out, background-color 300ms ease-in-out;
 }
 
 .formcarry-alert {
