--- a/styles.css
+++ b/styles.css
@@ -281,7 +281,7 @@ ul li {
 .formcarry-form label {
     display: block;
     font-size: 1.15em;
-    padding: 12px 0 2px 0;
+    padding: 12px 0 6 0;
 }
 
 .formcarry-form input,
@@ -290,7 +290,7 @@ textarea {
     border-radius: 7px;
     border-color: transparent;
     background-color: white;
-    box-shadow: 0px 0px 10px#1d1d1d6e;
+    box-shadow: 0px 0px 4px#1d1d1d6e;
     color: #11111199;
     outline: none;
     text-transform: none;
@@ -314,7 +314,7 @@ textarea {
     border-color: transparent;
     border-radius: 7px;
     background-color: white;
-    box-shadow: 0px 0px 10px#1d1d1d6e;
+    box-shadow: 0px 0px 4px#1d1d1d6e;
 }
 
 .formcarry-form button:hover {
