--- a/styles.css
+++ b/styles.css
@@ -281,7 +281,7 @@ ul li {
 .formcarry-form label {
     display: block;
     font-size: 1.15em;
-    padding: 12px 0 6 0;
+    padding: 12px 0 6px 0;
 }
 
 .formcarry-form input,
