--- a/styles.css
+++ b/styles.css
@@ -327,6 +327,10 @@ textarea {
     background-color: black;
 }
 
+.workaround > p {
+    font-size: 3px;
+}
+
 
 
 @media screen and (max-width: 700px) {
